; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_draw.c_PicoDrawSetOutBuf.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_draw.c_PicoDrawSetOutBuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DrawLineDestBase = common dso_local global i8* null, align 8
@DrawLineDestIncrement = common dso_local global i32 0, align 4
@DrawScanline = common dso_local global i32 0, align 4
@DrawLineDest = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PicoDrawSetOutBuf(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  store i8* %5, i8** @DrawLineDestBase, align 8
  %6 = load i32, i32* %4, align 4
  store i32 %6, i32* @DrawLineDestIncrement, align 4
  %7 = load i8*, i8** @DrawLineDestBase, align 8
  %8 = load i32, i32* @DrawScanline, align 4
  %9 = load i32, i32* %4, align 4
  %10 = mul nsw i32 %8, %9
  %11 = sext i32 %10 to i64
  %12 = getelementptr i8, i8* %7, i64 %11
  store i8* %12, i8** @DrawLineDest, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
